--- a/css/style.css
+++ b/css/style.css
@@ -2047,15 +2047,18 @@ body.game {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 8rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 100%;
+  min-height: 100%;
   text-align: center;
+}
+
+.challenge-game .result#result_final {
+  gap: 8rem;
 }
 
 .challenge-game .result .result_title {
